# python-executor

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  QWEN.md  README.md  go.mod  go.sum
benchmarks/: results-2026-01-17.json  results-2026-01-17.md
cmd/gendocs/: main.go
cmd/python-executor/: main.go  main_test.go
cmd/server/: main.go
deploy/: Dockerfile  docker-compose.yaml  nomad.hcl
docs/: PRD.md  README.md  api.md  cli.md  configuration.md  examples.md  go-client.md  goal.md  http-api.md  python-client.md  security.md
docs/_generated/cli/: python-executor.md  python-executor_follow.md  python-executor_kill.md  python-executor_run.md  python-executor_submit.md  python-executor_version.md
docs/_generated/go/: client.md
docs/_generated/python/: README.md  types.md  (+2 more)
docs/swagger/: docs.go  swagger.json  swagger.yaml
internal/api/: handlers.go  handlers_test.go  middleware.go  router.go
internal/config/: config.go  config_test.go
internal/executor/: docker.go  docker_test.go  interface.go
internal/imports/: detector.go  detector_test.go  mapping.go  parser.go  stdlib.go
internal/storage/: consul.go  interface.go  memory.go  memory_test.go
internal/tar/: extract.go  extract_test.go
notes/: notes.md
pkg/client/: client.go  client_test.go  example_test.go  options.go  tar.go  tar_test.go  types.go
python/: README.md  pyproject.toml
python/python_executor_client/: __init__.py  client.py  examples.py  types.py
scripts/: benchmark.py  generate-docs.sh  test-eval-last-expr.sh  test-examples.py  test-examples.sh
tests/: test.py
