[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-executor-client"
version = "1.0.0"
description = "Python client for python-executor service"
readme = "README.md"
authors = [{name = "Gerald Thewes", email = "gerald@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.0",
]

[project.urls]
Homepage = "https://github.com/geraldthewes/python-executor"
Repository = "https://github.com/geraldthewes/python-executor"
